# actionboard

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
config_examples/: actions_config.yaml  ui_config.yaml
examples/: dynamic_board_controller.py
src/visual_control_board/: __init__.py  dependencies.py  live_updates.py  main.py
src/visual_control_board/actions/: __init__.py  built_in_actions.py  registry.py
src/visual_control_board/config/: __init__.py  loader.py  models.py
src/visual_control_board/static/css/: style.css
src/visual_control_board/static/js/: main.js
src/visual_control_board/user_config/: .gitkeep
src/visual_control_board/web/: __init__.py  routes.py
src/visual_control_board/web/templates/: index.html
src/visual_control_board/web/templates/partials/: button.html  header_title_tag.html  nav.html  page_content.html  title_tag.html  toast.html  update_banner.html
user_config/: .gitkeep
